# cryspy

./: .gitignore  AUTHORS  Gemfile  LICENSE  MANIFEST.in  README.md  _config.yml  about.markdown  bscat.tab  index.markdown  intPSD.py  itables.txt  pixi.toml  pyproject.toml  readme.md  readme.rst  requirements.txt  rhochi.py  rhochi_viewer.pyw  scheme.markdown  setup.py  tab_bscat.txt  todo.md  version_next.pyperf  version_next.pyproj  version_next.sln  wind_graph_inp.py  wind_graph_mod.py  wind_graph_mod_mono.py  wind_ub.py
DAG_4K_0T_powder_1d/: pnd_calc.rcif  pnd_data.rcif
Fe3O4_0T_powder_1d/: 1_profile_for.py  main.rcif  pnd_calc.rcif  pnd_data.rcif
Fe3O4_150K_6T_powder_2d/: main.rcif
Ho2Ti2O7_5K_1T_powder_1d/: main.rcif  powder1_calc.rcif
PbSO4_unpol-powder/: main.rcif  pd_calc.rcif  refine.py
SMM_powder_texture_2d/: exp_calc.rcif  main.rcif
TbMnO3_single_50K_4_orientations/: 50k1t_calc.rcif  50k1t_data.rcif  50k7a_calc.rcif  50k7a_data.rcif  50k7c_calc.rcif  50k7c_data.rcif  50k7t_calc.rcif  50k7t_data.rcif  main.rcif
_posts/: 2019-01-01-general-information.md  2019-01-02-Installation_and_upgrade.md  2019-01-03-Running-program.md  2019-02-01-preffered-orientation.md  2020-02-02-local-susceptibility-tensor.md  2020-02-03-peak-asymmetry.md  2020-02-04-lambda-contamination.md  2020-12-03-welcome-to-jekyll.markdown
code/: Variable.py  api_rcif_model.py  calculated_data.py  cl_calculated_data_powder_1d.py  cl_calculated_data_powder_2d.py  cl_calculated_data_single.py  cl_crystal.py  cl_experiment_powder_1d.py  cl_experiment_powder_2d.py  cl_experiment_powder_texture_2d.py  cl_experiment_single.py  cl_experiment_single_domain.py  cl_model.py  cl_observed_data_powder_1d.py  cl_observed_data_single.py  cl_read_rcif.py  cl_setup_powder_1d.py  cl_setup_powder_2d.py  cl_setup_single.py  crystal.py  error_simplex.py  examples.py  experiment.py  model.py  (+2 more)
(+1542 files in other folders)
